инварианты запроса на обновление - end_date правильно зануляется/обновляется/игнорируется
