# cmd/subs/docs/swagger.json
@@ -286,10 +286,7 @@
                 ],
                 "responses": {
                     "202": {
-                        "description": "Accepted",
-                        "schema": {
-                            "$ref": "#/definitions/http.Subscription"
-                        }
+                        "description": "Accepted"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -314,23 +311,6 @@
         }
     },
     "definitions": {
-        "http.EndDateUpdate": {
-            "type": "object",
-            "properties": {
-                "null": {
-                    "description": "Если true - нужно установить в null",
-                    "type": "boolean"
-                },
-                "present": {
-                    "description": "Было ли поле передано в запросе",
-                    "type": "boolean"
-                },
-                "value": {
-                    "description": "Значение если не null",
-                    "type": "string"
-                }
-            }
-        },
         "http.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -344,11 +324,14 @@
                 }
             }
         },
+        "http.NullableStringUpdate": {
+            "type": "object"
+        },
         "http.Subscription": {
             "type": "object",
             "properties": {
                 "end_date": {
-                    "description": "Subscription end date in MM-YYYY format, optional\nrequired: false\nnullable: true\nexample: 07-2026",
+                    "description": "Subscription end date in MM-YYYY format, optional\nexample: 07-2026",
                     "type": "string"
                 },
                 "id": {
@@ -405,7 +388,7 @@
                     "description": "Subscription end date in MM-YYYY format, optional\nrequired: false\nnullable: true",
                     "allOf": [
                         {
-                            "$ref": "#/definitions/http.EndDateUpdate"
+                            "$ref": "#/definitions/http.NullableStringUpdate"
                         }
                     ]
                 },
